@@ -617,8 +617,8 @@ stopifnot(!is.unsorted(a), # 11:16 *is* sorted
 # getSrcref failed when rematchDefinition was used
 text <- '
 setClass("MyClass", representation(val = "numeric"))
-setMethod("plot", signature(x = "MyClass"), 
-    function(x, y, ...) { 
+setMethod("plot", signature(x = "MyClass"),
+    function(x, y, ...) {
         # comment
 	NULL
     })
@@ -632,3 +632,14 @@ setMethod("initialize", signature = "MyClass",
 source(textConnection(text), keep.source = TRUE)
 getSrcref(getMethod("plot", "MyClass"))
 getSrcref(getMethod("initialize", "MyClass"))
+
+## PR#15691
+setGeneric("fun", function(x, ...) standardGeneric("fun"))
+setMethod("fun", "character", identity)
+setMethod("fun", "numeric", function(x) {
+  x <- as.character(x)
+  callGeneric()
+})
+
+stopifnot(identical(fun(1), do.call(fun, list(1))))
+## failed in R < 3.1.0
